[fix] trigger gitaction

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - feat/deploy
   workflow_dispatch:
+    inputs:
+      force_build:
+        description: "Force build both services (true/false)"
+        required: false
+        default: "true"
 
 env:
   REGISTRY: ghcr.io
@@ -18,6 +23,7 @@ jobs:
       lip: ${{ steps.filter.outputs.lip }}
     steps:
       - uses: actions/checkout@v4
+
       - uses: dorny/paths-filter@v2
         id: filter
         with:
@@ -29,18 +35,26 @@ jobs:
 
   build-voice:
     needs: detect-changes
-    if: needs.detect-changes.outputs.voice == 'true'
+    # 변경이 있거나, 수동 실행 + force_build=true면 무조건 실행
+    if: |
+      needs.detect-changes.outputs.voice == 'true' ||
+      github.event_name == 'workflow_dispatch' && github.event.inputs.force_build == 'true'
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       packages: write
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/setup-buildx-action@v3
+
       - uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: docker/build-push-action@v5
         with:
           context: ./voice/zonos_api_package
@@ -51,18 +65,26 @@ jobs:
 
   build-lip:
     needs: detect-changes
-    if: needs.detect-changes.outputs.lip == 'true'
+    # 변경이 있거나, 수동 실행 + force_build=true면 무조건 실행
+    if: |
+      needs.detect-changes.outputs.lip == 'true' ||
+      github.event_name == 'workflow_dispatch' && github.event.inputs.force_build == 'true'
     runs-on: ubuntu-latest
     permissions:
+      contents: read
       packages: write
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/setup-buildx-action@v3
+
       - uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: docker/build-push-action@v5
         with:
           context: ./lip/Wav2Lip-master
@@ -72,8 +94,11 @@ jobs:
             ghcr.io/${{ env.IMAGE_PREFIX }}-lip:${{ github.sha }}
 
   deploy:
+    # build가 skipped여도 deploy는 돌릴 수 있게 always()
     needs: [build-voice, build-lip]
+    if: always()
     runs-on: ubuntu-latest
+
     steps:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
@@ -82,7 +107,12 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
+            set -e
             cd ${{ secrets.SERVER_PATH }}
+
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml up -d --remove-orphans
+
+            # 너무 공격적으로 prune하면 캐시/레이어 다시받아서 느려질 수 있음
             docker image prune -f
+            echo "Deployment completed at $(date)"
