--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,95 +1,89 @@
-name: Build and Deploy AI Services
+name: Build and Deploy AI Services (Initial)
 
 on:
   push:
-    branches: [feat/deploy]
+    branches: [ feat/deploy ]
   workflow_dispatch:
-    inputs:
-      force_build:
-        description: "Force build both services (true/false)"
-        required: false
-        default: "true"
 
 env:
   REGISTRY: ghcr.io
   IMAGE_PREFIX: nninji/amore-ai
 
 jobs:
-  detect-changes:
-    runs-on: ubuntu-latest
-    outputs:
-      voice: ${{ steps.filter.outputs.voice }}
-      lip: ${{ steps.filter.outputs.lip }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            voice:
-              - 'voice/zonos_api_package/**'
-            lip:
-              - 'lip/Wav2Lip-master/**'
-
+  # ----------------------------
+  # 1) Voice 이미지 빌드 & 푸시
+  # ----------------------------
   build-voice:
-    needs: detect-changes
-    if: |
-      needs.detect-changes.outputs.voice == 'true' ||
-      (github.event_name == 'workflow_dispatch' && github.event.inputs.force_build == 'true')
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login GHCR
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
+
+      - name: Build & Push (voice)
+        uses: docker/build-push-action@v5
         with:
           context: ./voice/zonos_api_package
           push: true
           tags: |
-            ghcr.io/${{ env.IMAGE_PREFIX }}-voice:latest
-            ghcr.io/${{ env.IMAGE_PREFIX }}-voice:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-voice:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-voice:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
+  # ----------------------------
+  # 2) Lip 이미지 빌드 & 푸시
+  # ----------------------------
   build-lip:
-    needs: detect-changes
-    if: |
-      needs.detect-changes.outputs.lip == 'true' ||
-      (github.event_name == 'workflow_dispatch' && github.event.inputs.force_build == 'true')
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: docker/setup-buildx-action@v3
-      - uses: docker/login-action@v3
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login GHCR
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
+
+      - name: Build & Push (lip)
+        uses: docker/build-push-action@v5
         with:
           context: ./lip/Wav2Lip-master
           push: true
           tags: |
-            ghcr.io/${{ env.IMAGE_PREFIX }}-lip:latest
-            ghcr.io/${{ env.IMAGE_PREFIX }}-lip:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-lip:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-lip:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
+  # ----------------------------
+  # 3) EC2 배포
+  # ----------------------------
   deploy:
     needs: [build-voice, build-lip]
-    # build가 둘 다 skipped면 deploy도 안 함
-    if: |
-      always() &&
-      (needs.build-voice.result == 'success' || needs.build-lip.result == 'success')
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to EC2
+      - name: Deploy to EC2 (docker compose pull & up)
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.SERVER_HOST }}
@@ -98,6 +92,9 @@ jobs:
           script: |
             set -e
             cd ${{ secrets.SERVER_PATH }}
+            
             docker compose -f docker-compose.prod.yml pull
             docker compose -f docker-compose.prod.yml up -d --remove-orphans
+
             docker image prune -f
+            echo "Deployment completed at $(date)"
