--- a/voice/zonos_api_package/requirements_api.txt
+++ b/voice/zonos_api_package/requirements_api.txt
@@ -1,3 +1,6 @@
+--index-url https://download.pytorch.org/whl/cpu
+--extra-index-url https://pypi.org/simple
+
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 pydantic==2.6.0
@@ -5,9 +8,9 @@ python-multipart==0.0.6
 requests
 
 # 딥러닝 및 오디오 관련
-torch
-torchaudio
-
+torch==2.2.1
+torchvision==0.17.1
+torchaudio==2.2.1
 # 모델 및 데이터 유틸
 safetensors
 huggingface_hub
