[fix] fix image_prefix(amore-gg)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,13 @@ on:
     branches: [ feat/deploy ]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write
+
 env:
   REGISTRY: ghcr.io
-  IMAGE_PREFIX: nninji/amore-ai
+  IMAGE_PREFIX: amore-gg/amore-ai
 
 jobs:
   # ----------------------------
