--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,37 +2,33 @@ version: "3.8"
 
 services:
   voice-api:
-    image: ghcr.io/nninji/amore-ai-voice:latest
-    container_name: voice-api
+    build:
+      context: ./voice/zonos_api_package
+      dockerfile: Dockerfile
+    container_name: voice-api-dev
     ports:
       - "1000:1000"
     environment:
-      - ENV=production
+      - ENV=dev
       - PYTHONUNBUFFERED=1
     volumes:
       - voice_output:/app/generated_audio
-    restart: always
-    deploy:
-      resources:
-        limits:
-          memory: 8G
+    restart: unless-stopped
 
   lip-api:
-    image: ghcr.io/nninji/amore-ai-lip:latest
-    container_name: lip-api
+    build:
+      context: ./lip/Wav2Lip-master
+      dockerfile: Dockerfile
+    container_name: lip-api-dev
     ports:
       - "2000:2000"
     environment:
-      - ENV=production
+      - ENV=dev
       - PYTHONUNBUFFERED=1
     volumes:
       - lip_output:/app/results
       - lip_uploads:/app/uploads
-    restart: always
-    deploy:
-      resources:
-        limits:
-          memory: 4G
+    restart: unless-stopped
 
 volumes:
   voice_output:
