[fix] ffmpeg 설치 추가

--- a/voice/zonos_api_package/Dockerfile
+++ b/voice/zonos_api_package/Dockerfile
@@ -4,9 +4,13 @@ WORKDIR /app
 ENV PYTHONUNBUFFERED=1
 ENV PIP_NO_CACHE_DIR=1
 
-# (필요 최소) 빌드/런타임 패키지 + Rust
+# 빌드/런타임 패키지 + Rust + ffmpeg (mp3 로드용)
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends curl build-essential && \
+    apt-get install -y --no-install-recommends \
+        curl \
+        build-essential \
+        ffmpeg \
+        libsndfile1 && \
     curl https://sh.rustup.rs -sSf | sh -s -- -y && \
     apt-get purge -y curl && \
     apt-get autoremove -y && \
