--- a/voice/zonos_api_package/Dockerfile
+++ b/voice/zonos_api_package/Dockerfile
@@ -4,11 +4,12 @@ WORKDIR /app
 ENV PYTHONUNBUFFERED=1
 ENV PIP_NO_CACHE_DIR=1
 
-# 빌드 패키지 + Rust (sudachipy 빌드용)
+# 빌드 패키지 + Rust + libsndfile (wav 로드용)
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         curl \
-        build-essential && \
+        build-essential \
+        libsndfile1 && \
     curl https://sh.rustup.rs -sSf | sh -s -- -y && \
     apt-get purge -y curl && \
     apt-get autoremove -y && \
