--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,10 +81,43 @@ jobs:
           cache-to: type=gha,mode=max
 
   # ----------------------------
-  # 3) EC2 배포
+  # 3) ElevenLabs 이미지 빌드 & 푸시
+  # ----------------------------
+  build-elevenlabs:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & Push (elevenlabs)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./voice/eleven_labs
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-elevenlabs:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # ----------------------------
+  # 4) EC2 배포
   # ----------------------------
   deploy:
-    needs: [build-voice, build-lip]
+    needs: [build-voice, build-lip, build-elevenlabs]
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to EC2 (docker compose pull & up)
