--- a/video/image/qwen/.gitignore
+++ b/video/image/qwen/.gitignore
@@ -1,29 +1,18 @@
-# 가상환경
-venv/
-env/
-.venv/
-
-# Python 캐시
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# 환경 파일
-.env
-.env.local
+.venv/
+venv/
 
 # 생성된 파일
-uploads/*
-outputs/*
-!uploads/.gitkeep
-!outputs/.gitkeep
+uploads/
+outputs/
 
 # IDE
 .idea/
 .vscode/
-*.swp
-.DS_Store
 
-# 로그
-*.log
-
+# 환경변수
+.env
+.env.local
