--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,10 +114,43 @@ jobs:
           cache-to: type=gha,mode=max
 
   # ----------------------------
-  # 4) EC2 배포
+  # 4) Qwen Image Edit 이미지 빌드 & 푸시
+  # ----------------------------
+  build-qwen-edit:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & Push (qwen-edit)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./video/image/qwen
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-qwen-edit:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-qwen-edit:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # ----------------------------
+  # 5) EC2 배포
   # ----------------------------
   deploy:
-    needs: [build-voice, build-lip, build-elevenlabs]
+    needs: [build-voice, build-lip, build-elevenlabs, build-qwen-edit]
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to EC2 (docker compose pull & up)
