--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -147,10 +147,43 @@ jobs:
           cache-to: type=gha,mode=max
 
   # ----------------------------
-  # 5) EC2 배포
+  # 5) Video I2V (Wan2) 이미지 빌드 & 푸시
+  # ----------------------------
+  build-video-i2v:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & Push (video-i2v)
+        uses: docker/build-push-action@v5
+        with:
+          context: ./video/i2v/wan2
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-video-i2v:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # ----------------------------
+  # 6) EC2 배포
   # ----------------------------
   deploy:
-    needs: [build-voice, build-lip, build-elevenlabs, build-video-qwen]
+    needs: [build-voice, build-lip, build-elevenlabs, build-video-qwen, build-video-i2v]
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to EC2 (docker compose pull & up)
