--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -55,6 +55,20 @@ services:
       - qwen_outputs:/app/outputs
     restart: unless-stopped
 
+  video-i2v-api:
+    image: ghcr.io/amore-gg/amore-ai-video-i2v:latest
+    container_name: video-i2v-api
+    ports:
+      - "4200:4200"
+    environment:
+      - ENV=prod
+      - PYTHONUNBUFFERED=1
+      - COMFYUI_URL=${COMFYUI_URL}
+    volumes:
+      - i2v_uploads:/app/uploads
+      - i2v_outputs:/app/outputs
+    restart: unless-stopped
+
 volumes:
   voice_output:
   lip_output:
@@ -62,3 +76,5 @@ volumes:
   elevenlabs_output:
   qwen_uploads:
   qwen_outputs:
+  i2v_uploads:
+  i2v_outputs:
