--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,71 +14,71 @@ env:
   IMAGE_PREFIX: amore-gg/amore-ai
 
 jobs:
-  # ----------------------------
-  # 1) Voice 이미지 빌드 & 푸시
-  # ----------------------------
-  build-voice:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # # ----------------------------
+  # # 1) Voice 이미지 빌드 & 푸시 (임시 비활성화)
+  # # ----------------------------
+  # build-voice:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
 
-      - name: Login GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Login GHCR
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ${{ env.REGISTRY }}
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push (voice)
-        uses: docker/build-push-action@v5
-        with:
-          context: ./voice/zonos_api_package
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-voice:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-voice:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  #     - name: Build & Push (voice)
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./voice/zonos_api_package
+  #         push: true
+  #         tags: |
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-voice:latest
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-voice:${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
 
-  # ----------------------------
-  # 2) Lip 이미지 빌드 & 푸시
-  # ----------------------------
-  build-lip:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # # ----------------------------
+  # # 2) Lip 이미지 빌드 & 푸시 (임시 비활성화)
+  # # ----------------------------
+  # build-lip:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: read
+  #     packages: write
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
 
-      - name: Login GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: Login GHCR
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ${{ env.REGISTRY }}
+  #         username: ${{ github.actor }}
+  #         password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push (lip)
-        uses: docker/build-push-action@v5
-        with:
-          context: ./lip/Wav2Lip-master
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-lip:latest
-            ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-lip:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+  #     - name: Build & Push (lip)
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./lip/Wav2Lip-master
+  #         push: true
+  #         tags: |
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-lip:latest
+  #           ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-lip:${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
 
   # ----------------------------
   # 3) ElevenLabs 이미지 빌드 & 푸시
@@ -183,7 +183,7 @@ jobs:
   # 6) EC2 배포
   # ----------------------------
   deploy:
-    needs: [build-voice, build-lip, build-elevenlabs, build-video-qwen, build-video-i2v]
+    needs: [build-elevenlabs, build-video-qwen, build-video-i2v]  # build-voice, build-lip 임시 비활성화
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to EC2 (docker compose pull & up)
