--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -30,45 +30,62 @@ services:
   #     - /home/ubuntu/amore-ai/lip/face_detection/detection/sfd/s3fd.pth:/app/face_detection/detection/sfd/s3fd.pth
   #   restart: unless-stopped
 
-  elevenlabs-api:
-    image: ghcr.io/amore-gg/amore-ai-elevenlabs:latest
-    container_name: elevenlabs-api
-    ports:
-      - "1100:1100"
-    environment:
-      - ENV=prod
-      - PYTHONUNBUFFERED=1
-      - ELEVENLABS_API_KEY=${ELEVENLABS_API_KEY}
-    volumes:
-      - elevenlabs_output:/app/generated_audio
-    restart: unless-stopped
+  # elevenlabs-api:
+  #   image: ghcr.io/amore-gg/amore-ai-elevenlabs:latest
+  #   container_name: elevenlabs-api
+  #   ports:
+  #     - "1100:1100"
+  #   environment:
+  #     - ENV=prod
+  #     - PYTHONUNBUFFERED=1
+  #     - ELEVENLABS_API_KEY=${ELEVENLABS_API_KEY}
+  #   volumes:
+  #     - elevenlabs_output:/app/generated_audio
+  #   restart: unless-stopped
 
-  video-qwen-api:
+  # video-qwen-api:
+  #   image: ghcr.io/amore-gg/amore-ai-video-qwen:latest
+  #   container_name: video-qwen-api
+  #   ports:
+  #     - "4100:4100"
+  #   environment:
+  #     - ENV=prod
+  #     - PYTHONUNBUFFERED=1
+  #     - COMFYUI_URL=${COMFYUI_URL}
+  #   volumes:
+  #     - qwen_uploads:/app/uploads
+  #     - qwen_outputs:/app/outputs
+  #   restart: unless-stopped
+
+  # video-i2v-api:
+  #   image: ghcr.io/amore-gg/amore-ai-video-i2v:latest
+  #   container_name: video-i2v-api
+  #   ports:
+  #     - "4200:4200"
+  #   environment:
+  #     - ENV=prod
+  #     - PYTHONUNBUFFERED=1
+  #     - COMFYUI_URL=${COMFYUI_URL}
+  #   volumes:
+  #     - i2v_uploads:/app/uploads
+  #     - i2v_outputs:/app/outputs
+  #   restart: unless-stopped
+  
+
+  scenario-qwen-api:
     image: ghcr.io/amore-gg/amore-ai-video-qwen:latest
     container_name: video-qwen-api
     ports:
-      - "4100:4100"
+      - "3000:3000"
     environment:
       - ENV=prod
       - PYTHONUNBUFFERED=1
       - COMFYUI_URL=${COMFYUI_URL}
+      - MODEL_DIR=/app/safetensors
     volumes:
-      - qwen_uploads:/app/uploads
-      - qwen_outputs:/app/outputs
-    restart: unless-stopped
-
-  video-i2v-api:
-    image: ghcr.io/amore-gg/amore-ai-video-i2v:latest
-    container_name: video-i2v-api
-    ports:
-      - "4200:4200"
-    environment:
-      - ENV=prod
-      - PYTHONUNBUFFERED=1
-      - COMFYUI_URL=${COMFYUI_URL}
-    volumes:
-      - i2v_uploads:/app/uploads
-      - i2v_outputs:/app/outputs
+      - /home/ubuntu/amore-ai/scenario/safetensors:/app/safetensors
+      - qwen2.5_uploads:/app/uploads
+      - qwen2.5_outputs:/app/outputs
     restart: unless-stopped
 
 volumes:
@@ -80,3 +97,5 @@ volumes:
   qwen_outputs:
   i2v_uploads:
   i2v_outputs:
+  qwen2.5_uploads:
+  qwen2.5_outputs:
