--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,7 +76,21 @@ services:
       - i2v_uploads:/app/uploads
       - i2v_outputs:/app/outputs
     restart: unless-stopped
-
+  scenario-qwen-api:
+    build:
+      context: ./scenario/Qwen2.5-VL-7B-Instruct
+      dockerfile: Dockerfile
+    container_name: scenario-qwen-api-dev
+    ports:
+      - "3000:3000"
+    environment:
+      - ENV=dev
+      - PYTHONUNBUFFERED=1
+      - COMFYUI_URL=${COMFYUI_URL:-http://host.docker.internal:8000}
+    volumes:
+      - qwen2.5_uploads:/app/uploads
+      - qwen2.5_outputs:/app/outputs
+    restart: unless-stopped
 volumes:
   voice_output:
   lip_output:
@@ -86,3 +100,5 @@ volumes:
   qwen_outputs:
   i2v_uploads:
   i2v_outputs:
+  qwen2.5_uploads:
+  qwen2.5_outputs:
